crates/musli-web-macros/tests/ui/missing-type-error.stderr
error: Expected corresponding `type` declaration for `Broadcast`
 --> tests/ui/missing-type-error.rs:2:24
  |
2 |     impl Broadcast for Broadcast {
  |                        ^^^^^^^^^
