crates/musli-web-macros/tests/ui/missing-type-error.rs
musli_web_macros::define! {
    impl Broadcast for Broadcast {
        impl Event for String;
    }
}

fn main() {}